[project]
name = "langgraph-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.3.0",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.2.1",
    "langchain[google-genai]>=0.3.25",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
]
